Radio re branding

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ radiozet.cssQuery = div.chart__full__list__track-list div.track div.track div.ar
 eska.address = https://www.eska.pl/goraca20/
 eska.cssQuery = div.artist-hits a.single-hit__title
 
-radiowawa.address = http://www.radiowawa.pl/top13
-radiowawa.cssQuery = div.notowanie-row span.title
+radiosupernova.address = https://www.radiosupernova.pl/super-13/
+radiosupernova.cssQuery = div.artist-hits a.single-hit__title
 
 rmffm.address = https://www.rmf.fm/au/?a=poplista
 rmffm.cssQuery = div.box-text div.poplista-artist-title
